# ItalianBriscolaSDL

./: CMakeLists.txt  CmakeLists.txt  README.md
include/: AssetManager.h  Briscola.h  Constants.h  ErrorMessage.h  Game.h  TextRenderer.h  TextRendererTimer.h  TextureManager.h  Timer.h
src/: AssetManager.cpp  Briscola.cpp  ErrorMessage.cpp  Game.cpp  Source.cpp  TextRenderer.cpp  TextRendererTimer.cpp  TextureManager.cpp  Timer.cpp
